--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <ul>
-	<li>Länge: {{ page.lenght }}</li>
+	<li>Länge: {{ page.length }}</li>
 	<li>Steigung: {{ page.up }}</li>
 	<li>Gefälle: {{ page.down }}</li>
 </ul>	
