--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,9 @@
         <title>{{ site.name }} - {{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
+        <!-- Custom CSS 
         <link rel="stylesheet" href="/css/main.css">
-
+        -->
     </head>
     <body>
 
