--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,11 @@ a         { color: #00a; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 /*****************************************************************************/
 /*
 /* Home
